<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Futbol</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_message_jugador">¿Está seguro de que desea borrar el jugador y todos sus partidos?</string>
    <string name="dialog_title_jugador">Borrar jugador</string>
    <string name="dialog_message_partido">¿Está seguro de que desea borrar el partido?</string>
    <string name="dialog_title_partido">Borrar partido</string>
    <string name="tostada_insertado">Jugador insertado</string>
    <string name="tostada_yainsertado">Ya ha insertado ese jugador</string>
    <string name="tostada_insertado2">Partido insertado</string>
    <string name="tostada_noexiste">El jugador introducido no existe</string>
    <string name="tostada_insertado3">Ya ha insertado ese contrincante</string>
    <string name="tostada_nojugadores">Inserte primero jugadores</string>
    <string name="tostada_valoracion">MEDIA VALORACIÓN: </string>
    <string name="tostada_nopartidos">No hay partidos de ese jugador</string>
    <string name="tostada_campos">Debe rellenar todos los campos</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <!-- Layout -->
    <string name="nuevo_jugador">Jugador</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_fnac">Fecha de nacimiento</string>
    <string name="bt_alta">Alta</string>
    <string name="nuevo_partido">Partido</string>
    <string name="hint_id">Jugador</string>
    <string name="hint_valoracion">Valoración</string>
    <string name="hint_contrincante">Contrincante</string>
    <string name="bt_nuevo">Nuevo</string>
    <!-- Query -->
    <string name="query_jugador_unique">SELECT *, COUNT (*) FROM jugador WHERE nombre=\'</string>
    <string name="query_contrincante_unique">SELECT *, COUNT (*) FROM partido WHERE contrincante =\'</string>
    <string name="query_jugador_insertado">SELECT *, COUNT (*) FROM jugador</string>

</resources>
