<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nuevo_jugador"
        android:id="@+id/tvJugador"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre"
        android:id="@+id/tvJNombre"
        android:layout_margin="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_telefono"
        android:id="@+id/tvJTlf"
        android:layout_margin="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_fnac"
        android:id="@+id/tvJFnac"
        android:layout_margin="2dp" />

</LinearLayout>