<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nuevo_partido"
        android:id="@+id/tvPartido"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_jugador"
        android:id="@+id/tvPJugID"
        android:layout_margin="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_valoracion"
        android:id="@+id/tvPVal"
        android:layout_margin="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_contrincante"
        android:id="@+id/tvPCont"
        android:layout_margin="2dp" />
</LinearLayout>